# NexaWeb

./: README.md  pyproject.toml
nexaweb/: __init__.py  __main__.py
nexaweb/auth/: __init__.py  authenticator.py  guards.py  jwt_handler.py  session.py
nexaweb/cli/: __init__.py  main.py
nexaweb/cli/commands/: __init__.py  build.py  create.py  make.py  migrate.py  routes.py  serve.py  shell.py
nexaweb/core/: __init__.py  application.py  config.py  middleware.py  pipeline.py  request.py  response.py  router.py  websocket.py
nexaweb/engine/: __init__.py  pyxm_compiler.py  pyxm_parser.py  reactive.py  template.py
nexaweb/native/: __init__.py  parser.py  pool.py  router.py
nexaweb/orm/: __init__.py  connection.py  migrations.py  model.py  query.py
nexaweb/plugins/: __init__.py  base.py  hooks.py  loader.py
nexaweb/security/: __init__.py  csrf.py  rate_limiter.py  sandbox.py  sanitizer.py  xss.py
nexaweb/templates/: __init__.py  api.py  base.py  minimal.py  standard.py
nexaweb/utils/: __init__.py  env.py  helpers.py  logger.py
nexaweb/validation/: __init__.py  form.py  rules.py  validator.py
